--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,7 @@
 <html>
 	<head><title>NAV BAR CHANGES</title></head>
-	<body>HELLO Programer</body>
+	<body>
+		<p><h1>HELLO Programer</h1></p>
+		<p><h3>Adjastment of new codes</h3></p>
+	</body>
 </html>
